inou/prp/tests/errors/adv_neg_bit_index.prp
/*
:name: adv_neg_bit_index
:type: error
:error: negative
*/
// A negative bit index must be a clean compile error, never a segfault.
const b = 0ub0110_1001
const x = b#[-1]   // locate_error_here
cassert(x == 0)
